/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto2";

package pulsar.resource.usage;
option java_package = "org.apache.pulsar.broker.service.resource.usage";
option optimize_for = SPEED;

message NetworkUsage {
  required uint64 bytesPerPeriod = 1;
  required uint64 messagesPerPeriod = 2;
}

message StorageUsage {
  required uint64 totalBytes = 1;
}

message ResourceUsage {
  // owner is the key(ID) of the entity that reports the usage
  // It could be a resource-group or tenant, namespace or a topic
  required string owner = 1;
  optional NetworkUsage publish = 2;
  optional NetworkUsage dispatch = 3;
  optional StorageUsage storage = 4;
}

message ResourceUsageInfo {
  // Name of the broker
  required string broker = 1;

  repeated ResourceUsage usageMap = 2;
}
